# pipenv_tool

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  devenv.nix  hello_spark.py  pipenv_lock.bzl  pyspark_hello_world_udf.py  pyspark_rules.bzl  pytest_helper.py  requirements.in  requirements_lock_3_11.txt  requirements_lock_3_12.txt
