load("//:pipenv_lock.bzl", "pipenv_lock")
load("@python//3.12:defs.bzl", "compile_pip_requirements")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock_3_12.txt",
)

py_console_script_binary(
    name = "pipenv",
    pkg = "@pypi//pipenv",
    script = "pipenv",
    data = [
        ":requirements_lock_3_12.txt",
    ],
    deps = [
        "@pypi//virtualenv",
    ],
)

pipenv_lock(
    name = "pipfile_lock",
    requirements = ":requirements_lock_3_12.txt",
)
