load("//:pipenv_lock.bzl", "pipenv_lock")
load("//:pyspark_rules.bzl", "pyspark_binary")
load("@python//3.11:defs.bzl", "compile_pip_requirements")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock_3_11.txt",
)

py_console_script_binary(
    name = "pipenv",
    pkg = "@pypi//pipenv",
    script = "pipenv",
    data = [
        ":requirements_lock_3_11.txt",
    ],
    deps = [
        "@pypi//virtualenv",
    ],
)

pipenv_lock(
    name = "pipfile_lock",
    requirements = ":requirements_lock_3_11.txt",
)

py_library(
    name = "pytest_helper",
    srcs = ["pytest_helper.py"],
)

pyspark_binary(
    name = "pyspark_hello_world_udf",
    srcs = ["pyspark_hello_world_udf.py"],
    deps = [
        "@pypi//pyspark",
    ],
)

pyspark_binary(
    name = "hello_spark",
    srcs = ["hello_spark.py"],
    deps = [
        "@pypi//pyspark",
    ],
)
