"""Bazel repo using pipenv as a tool in a rule."""

module(
    name = "pipenv_tool",
    version = "0.0.0"
)

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_python", version = "1.6.3")
single_version_override(
    module_name = "rules_python",
    version = "1.6.3",
)

java_toolchains = use_extension("@rules_java//java:extensions.bzl", "toolchains")
use_repo(java_toolchains, "remotejdk17_linux")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.11",
)
use_repo(
    python,
    "python_3_11",
    "pythons_hub",
    python = "python_versions",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock_3_11.txt",
)
use_repo(pip, "pypi")